# info3dm

./: PredictiveModel.pickle  pyproject.toml
Week2/: Exercise.ipynb  Intro_Matplotlib.py  Intro_sklearn.ipynb  Introduction_to _NumPy.py
Week3/: dataset1.py  datasets.py  learn.py  learn1.py  model.pkl  nonlinear_ex.py  nonlinear_ex2.py  nonlinear_ex3.py  regression.py
